--- a/website/index.html
+++ b/website/index.html
@@ -21,21 +21,22 @@
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 	<style type="text/css">
-		/*
-	@media only screen and (-webkit-min-device-pixel-ratio:0){
-	    div{
-			color:#fff
-	    }
-	}
-	@-moz-document url-prefix() { 
-		div{
-			color:#fff
+	/*
+		@media only screen and (-webkit-min-device-pixel-ratio:0){
+			div{
+				color:#fff
+			}
 		}
-	}
+		@-moz-document url-prefix() { 
+			div{
+				color:#fff
+			}
+		}
 	*/
 	</style>
-	<script>
-		if (location.host != "localhost") {
+	<script type="text/javascript">
+		if (!checkHost()) {
+			//======================[ GA Code Start ]=========================//
 			(function (i, s, o, g, r, a, m) {
 			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
 				(i[r].q = i[r].q || []).push(arguments)
@@ -45,30 +46,33 @@
 
 			ga('create', 'UA-75073079-1', 'auto');
 			ga('send', 'pageview');
+			//======================[ GA Code End ]=========================// 
 		}
-	</script>
-	<script type="text/javascript">
-	if (location.host != "localhost") {
-		window.fbAsyncInit = function () {
-			FB.init({
-				appId: '908808245902696',
-				xfbml: true,
-				version: 'v2.5'
-			});
-		};
-		(function (d, s, id) {
-			var js, fjs = d.getElementsByTagName(s)[0];
-			if (d.getElementById(id)) return;
-			js = d.createElement(s); js.id = id;
-			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=908808245902696";
-			fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-	}
+		
+		//======================[ FB Code Start ]=========================// 
+			window.fbAsyncInit = function () {
+				FB.init({
+					appId: '908808245902696',
+					xfbml: true,
+					version: 'v2.5'
+				});
+			};
+			(function (d, s, id) {
+				var js, fjs = d.getElementsByTagName(s)[0];
+				if (d.getElementById(id)) return;
+				js = d.createElement(s); js.id = id;
+				js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=908808245902696";
+				fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));
+		//======================[ FB Code End ]=========================// 
+
+		function checkHost(){
+			return location.host == "localhost" || location.hash.search(/#yogesh/i) > -1;
+		}
 	</script>
 </head>
 
 <body>
-	<div id="fb-root"></div>
 	<div class="container top-header">
 		<h1 class="main-title">
 			<a class="logo"></a>
@@ -89,7 +93,14 @@
 			<span class="ref">Referred from : http://www.json.org</span>
 		</p>
 		<div id="jsonEditor">
-			<button class="cmd new-json">Create New JSON</button>
+			<div class="option-list">
+				<ul class="option-menu">
+					<li data-value="Create New Json" class="menu-item star-icon">Create New Json</li>
+					<li data-value="Load Example" class="menu-item star-icon">Load Example</li>
+					<li class="menu-item star-icon hide">Json From Url</li>
+				</ul>
+			</div>
+			<!--<button class="cmd new-json">Create New JSON</button>-->
 		</div><div class="cmd-btn">
 			<div class="cmd-wrap">
 				<span class="dir-ico fa fa-long-arrow-down"></span>
@@ -108,6 +119,17 @@
 			<div class="cmd-wrap">
 				<button class="cmd log">&gt;_ Log to console</button>
 			</div>
+			<div id="fb-root">
+				<div class="fb_like">
+					<div class="fb-like" 
+							data-href="http://www.jsonmaker.com" 
+							data-layout="box_count" 
+							data-action="like" 
+							data-show-faces="true"
+							data-share="true">
+					</div>
+				</div>
+			</div>
 		</div><div class="_block result_pad">
 			<span class="tl">JSON Stringify</span>
 			<span class="parse_error hide"></span>
@@ -121,10 +143,6 @@
 				<span class="t-point">Create JSON and click on 'JSON to Stringify' button. </span>
 				<span class="t-point">Paste/Write JSON string in the above textbox and click on 'Stringify to JSON' button</span>
 			</p>
-		</div>
-		<div class="fb_like">
-			<div class="fb-like" data-href="http://www.jsonmaker.com" data-layout="standard" data-action="like" data-show-faces="true"
-			 data-share="true"></div>
 		</div>
 	</section>
 	<section class="container contactus hide">
