--- a/jsonbuilder/website/index.html
+++ b/jsonbuilder/website/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="images/fav.png?">
+	<meta name="viewport" content="width=device-width" />
 	<meta name="keywords" content="json, json maker, json builder, json formatter, json generator, json editor" />
 	<meta name="discription" content="Create your json easily" />
 	<meta property="og:url" content="http://www.jsonmaker.com/index.html" />
@@ -21,52 +22,52 @@
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 	<style type="text/css">
-	/*
-		@media only screen and (-webkit-min-device-pixel-ratio:0){
-			div{
-				color:#fff
-			}
+		/*
+	@media only screen and (-webkit-min-device-pixel-ratio:0){
+		div {
+			color:#fff
 		}
-		@-moz-document url-prefix() { 
-			div{
-				color:#fff
-			}
+	}
+	@-moz-document url-prefix() { 
+		div{
+			color:#fff
 		}
+	}
 	*/
 	</style>
 	<script type="text/javascript">
 		if (!checkHost()) {
 			//======================[ GA Code Start ]=========================//
 			(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-				(i[r].q = i[r].q || []).push(arguments)
-			}, i[r].l = 1 * new Date(); a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+				i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+					(i[r].q = i[r].q || []).push(arguments)
+				}, i[r].l = 1 * new Date(); a = s.createElement(o),
+					m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
 			})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
 			ga('create', 'UA-75073079-1', 'auto');
 			ga('send', 'pageview');
 			//======================[ GA Code End ]=========================// 
 		}
-		
+
 		//======================[ FB Code Start ]=========================// 
-			window.fbAsyncInit = function () {
-				FB.init({
-					appId: '908808245902696',
-					xfbml: true,
-					version: 'v2.5'
-				});
-			};
-			(function (d, s, id) {
-				var js, fjs = d.getElementsByTagName(s)[0];
-				if (d.getElementById(id)) return;
-				js = d.createElement(s); js.id = id;
-				js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=908808245902696";
-				fjs.parentNode.insertBefore(js, fjs);
-			}(document, 'script', 'facebook-jssdk'));
+		window.fbAsyncInit = function () {
+			FB.init({
+				appId: '908808245902696',
+				xfbml: true,
+				version: 'v2.5'
+			});
+		};
+		(function (d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=908808245902696";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
 		//======================[ FB Code End ]=========================// 
 
-		function checkHost(){
+		function checkHost() {
 			return location.host == "localhost" || location.hash.search(/#yogesh/i) > -1;
 		}
 	</script>
@@ -121,12 +122,8 @@
 			</div>
 			<div id="fb-root">
 				<div class="fb_like">
-					<div class="fb-like" 
-							data-href="http://www.jsonmaker.com" 
-							data-layout="box_count" 
-							data-action="like" 
-							data-show-faces="true"
-							data-share="true">
+					<div class="fb-like" data-href="http://www.jsonmaker.com" data-layout="box_count" data-action="like" data-show-faces="true"
+					 data-share="true">
 					</div>
 				</div>
 			</div>
@@ -188,6 +185,7 @@
 			</footer>
 		</div>
 	</section>
+	<div class="intro-tip direction-ltr hide">Click Here</div>
 </body>
 
 </html>
